@@ -10,6 +10,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   e - TRQ-3098. Add the ability to set a parameter exit_code_canceled_job to force all
       canceled jobs to have the same exit code regardless of the state they were in
       when they were canceled.
+  e - TRQ-2836. Make node health check run on sister nodes when configured for job
+      start and job end as well.
 
 
 5.1.1
